tests: fix envelopes / allowances   - TrainPhysicsIntegrator fix critical bug   - MRSP and EnvelopeTrainPath fix constructions   - Coasting trigger detection   - ...